--- a/index.css
+++ b/index.css
@@ -1,5 +1,14 @@
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #ffffff;
 }
