--- a/index.css
+++ b/index.css
@@ -1,14 +1,14 @@
+
 html, body {
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;
+  font-family: 'Google Sans', Roboto, sans-serif;
 }
 
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: #ffffff;
+  position: relative;
 }
